# AutoNotion

./: .gitignore  .vercelignore  AzuriteConfig  LICENSE  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  function_app.py  host.json  logging_config.json  notion_query_tester.py  pyproject.toml  pytest-flask.ini  pytest-vercel.ini  pytest.ini  requirements.txt  vercel.json
__blobstorage__/: 6f9b5f05-3406-4f89-baab-419cbce9855f  8ae85c53-6d0f-4523-a9eb-159aacc0ed0d  AzuriteConfig
autonotion/: notion_registry_daily_plan.py
config/: env.example  logging.json  logging_vercel.json
deployments/azure/: function_app.py
deployments/vercel/api/: hello_notion.py  run_daily_plan.py  scheduled_daily_plan.py
docs/: DEPLOYMENT.md  LOGGING.md  TESTING.md  VERCEL.md
scripts/: run_tests.py
shared/: __init__.py  notion_service.py
tests/: test_add_alerted_objective_tasks.py  test_daily_tasks_automation.py  test_duplicate_unfinished_tasks.py  test_generate_periodic_tasks.py
tests/integration/: test_dual_deployment.py  test_flask_logging.py  test_shared_service_integration.py  test_vercel_api_routes.py
tests/unit/: test_shared_service.py
