[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonotion"
version = "0.1.0"
authors = [
  { name="Iván Moreno Muñoz", email="author@example.com" },
]
description = "An Azure Function to automate daily and periodic task creation in Notion."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "azure-functions",
    "requests",
    "tenacity",
    "freezegun", # Often useful in both tests and sometimes apps
    "pytest",
    "pytest-mock",
]