[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonotion"
version = "0.1.0"
authors = [
  { name="Iván Moreno Muñoz", email="author@example.com" },
]
description = "An intelligent daily task management system for Notion with dual deployment support."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core dependencies (shared between Azure and Vercel)
dependencies = [
    "requests",
    "tenacity",
    "freezegun",
    "pytest",
    "pytest-env",
]

# Optional dependencies for specific platforms
[project.optional-dependencies]
azure = [
    "azure-functions",
]